qt/multimedia/gen_qcameraexposurecontrol.h

class QCameraExposureControl;
class QMetaObject;
class QVariant;
typedef struct QCameraExposureControl QCameraExposureControl;
typedef struct QMetaObject QMetaObject;
typedef struct QVariant QVariant;
QMetaObject* QCameraExposureControl_metaObject(const QCameraExposureControl* self);
void* QCameraExposureControl_metacast(QCameraExposureControl* self, const char* param1);
int QCameraExposureControl_metacall(QCameraExposureControl* self, int param1, int param2, void** param3);
struct miqt_string QCameraExposureControl_tr(const char* s);
struct miqt_string QCameraExposureControl_trUtf8(const char* s);
bool QCameraExposureControl_isParameterSupported(const QCameraExposureControl* self, int parameter);
QVariant* QCameraExposureControl_requestedValue(const QCameraExposureControl* self, int parameter);
QVariant* QCameraExposureControl_actualValue(const QCameraExposureControl* self, int parameter);
bool QCameraExposureControl_setValue(QCameraExposureControl* self, int parameter, QVariant* value);
void QCameraExposureControl_requestedValueChanged(QCameraExposureControl* self, int parameter);
void QCameraExposureControl_connect_requestedValueChanged(QCameraExposureControl* self, intptr_t slot);
void QCameraExposureControl_actualValueChanged(QCameraExposureControl* self, int parameter);
void QCameraExposureControl_connect_actualValueChanged(QCameraExposureControl* self, intptr_t slot);
void QCameraExposureControl_parameterRangeChanged(QCameraExposureControl* self, int parameter);
void QCameraExposureControl_connect_parameterRangeChanged(QCameraExposureControl* self, intptr_t slot);
struct miqt_string QCameraExposureControl_tr2(const char* s, const char* c);
struct miqt_string QCameraExposureControl_tr3(const char* s, const char* c, int n);
struct miqt_string QCameraExposureControl_trUtf82(const char* s, const char* c);
struct miqt_string QCameraExposureControl_trUtf83(const char* s, const char* c, int n);
void QCameraExposureControl_delete(QCameraExposureControl* self);